[gd_scene load_steps=2 format=2]

[ext_resource path="res://JumpThrough_Platform.gd" type="Script" id=1]

[node name="JumpThrough_Platform" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 320, 0, 320, 64, 0, 64 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
modulate = Color( 0, 0.419608, 0.270588, 1 )
polygon = PoolVector2Array( 0, -16, 0, 8, 320, 8, 320, -16 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
